# read-mcp

./: Cargo.toml
.github/workflows/: deploy.yml
crates/read_mcp_tools/: Cargo.toml
crates/read_mcp_tools/src/: lib.rs
crates/readability/: Cargo.toml
crates/readability/src/: lib.rs
scripts/: install.sh
src/: main.rs  prompt_registry.rs  resource_registry.rs  tool_registry.rs
