[package]
name = "read-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
context-server.workspace = true
http-client.workspace = true
http-client-reqwest.workspace = true
parking_lot = "0.12.3"
read_mcp_tools.workspace = true
serde_json.workspace = true
tokio = { version = "1.42", features = ["full"] }

[workspace]
resolver = "3"
members = ["crates/read_mcp_tools", "crates/readability"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
context-server = { git = "https://github.com/fdionisi/context-server", version = "0.8.2" }
htmd = "0.1"
http-client = { git = "https://github.com/fdionisi/http-client", version = "0.2.0" }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", version = "0.2.0" }
indoc = "2"
read_mcp_tools = { path = "crates/read_mcp_tools" }
regex = "1.10"
scraper = "0.19"
serde_json = "1"
url = "2.5"
