[package]
name = "read_mcp_tools"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
context-server.workspace = true
htmd.workspace = true
http-client.workspace = true
indoc.workspace = true
scraper.workspace = true
serde_json.workspace = true
readability = { path = "../readability", version = "0.1" }
url.workspace = true
